--- a/src/app/converter/converter.component.html
+++ b/src/app/converter/converter.component.html
@@ -1,5 +1,5 @@
 <div class="converter">
-	<form class="converter__form">
+	<form class="converter__form" [formGroup]="form">
 		<div class="converter__row">
 			<div class="converter__value">
 				<label for="name">From:</label>
@@ -7,7 +7,7 @@
 					<option value="UAH">UAH — Ukrainian hryvnia</option>
 					<option value="USD">USD — United States dollar</option>
 					<option value="EUR">EUR — Euro</option>
-					<option value="GBP">PLN — Polish zloty</option>
+					<option value="PLN">PLN — Polish zloty</option>
 				</select>
 			</div>
 			<div class="converter__amount">
@@ -26,7 +26,7 @@
 					<option value="UAH">UAH — Ukrainian hryvnia</option>
 					<option value="USD">USD — United States dollar</option>
 					<option value="EUR">EUR — Euro</option>
-					<option value="GBP">PLN — Polish zloty</option>
+					<option value="PLN">PLN — Polish zloty</option>
 				</select>
 			</div>
 			<div class="converter__amount">
