created CurrencyService, added display of exchange rates in the header

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,15 +7,15 @@
 	<div class="currency__rates">
 		<div class="currency__card">
 			<div class="currency__title">USD</div>
-			<div class="currency__value" data-value="USD">--.--</div>
+			<div class="currency__value" data-value="USD">{{ USD }}</div>
 		</div>
 		<div class="currency__card">
 			<div class="currency__title">EUR</div>
-			<div class="currency__value" data-value="EUR">--.--</div>
+			<div class="currency__value" data-value="EUR">{{ EUR }}</div>
 		</div>
 		<div class="currency__card">
 			<div class="currency__title">PLN</div>
-			<div class="currency__value" data-value="PLN">--.--</div>
+			<div class="currency__value" data-value="PLN">{{ PLN }}</div>
 		</div>
 	</div>
 </nav>
