--- a/src/app/converter/converter.component.scss
+++ b/src/app/converter/converter.component.scss
@@ -1,7 +1,12 @@
 .converter {
+	text-align: center;
 	max-width: 800px;
 	width: 100%;
-	margin: 50px auto;
+	margin: 20px auto;
+
+	h1 {
+		font-size: 40px;
+	}
 
 	&__form {
 		display: flex;
