--- a/src/app/converter/converter.component.scss
+++ b/src/app/converter/converter.component.scss
@@ -112,4 +112,13 @@
 		}
 	}
 
+	&__loading {
+		position: absolute;
+		top: 48%;
+		left: 42%;
+		width: 250px;
+		height: 250px;
+		text-align: center;
+	}
+
 }
