--- a/src/app/converter/converter.component.scss
+++ b/src/app/converter/converter.component.scss
@@ -11,12 +11,21 @@
 	&__form {
 		display: flex;
 		justify-content: space-between;
-		width: 800px;
+		max-width: 800px;
+		width: 100%;
+
+		@media (max-width: 700px) {
+			flex-direction: column;
+		}
 	}
 
 	&__row {
 		display: flex;
 		flex-direction: column;
+
+		@media (max-width: 700px) {
+			margin: 0px 0px 30px 0px;
+		}
 	}
 
 	&__value {
@@ -109,6 +118,10 @@
 
 		&:active {
 			box-shadow: 0px 0px 0px 1px #38577a, 0px 0px 10px #7e9bbd;
+		}
+
+		@media (max-width: 700px) {
+			margin: 0px 0px 20px 0px;
 		}
 	}
 
